Fix spacing issue

--- a/app/css/vue/kb/style.css
+++ b/app/css/vue/kb/style.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/roboto');
+@import url('http://fonts.cdnfonts.com/css/nunito');
 [v-cloak] {
 	display: none;
 }
@@ -9,7 +11,7 @@
 	text-align: center;
 }
 .knowledge-base .masthead h1 {
-	font-family: Roboto;
+	font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
@@ -102,7 +104,7 @@
 	color: #43484d;
 }
 .knowledge-base .categories .categerios-parahraph{
-	font-family: Nunito;
+	font-family: "Nunito", sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 16px;
@@ -139,7 +141,7 @@
 
 .knowledge-base .categories-list h3 a{
 	text-transform: uppercase;
-	font-family: Roboto;
+	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
@@ -156,7 +158,7 @@
 	bottom: 10px;
 	right: 10px;
 	color: #00405C;
-	font-family: Nunito;
+	font-family: "Nunito", sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 16px;
@@ -177,10 +179,10 @@
 	line-height: 29px;
 	color: #43484d;
 	text-decoration: none;
-	margin-left: 30px;
+	margin-left: 24px;
 }
 .categories-list.widget_categories.tag-count, .article-description.mt-0.single{
-	padding: 10px 20px;
+	padding: 10px 48px 10px 24px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 3px;
@@ -225,7 +227,7 @@
 	list-style: disc;
 	padding-top: 10px;
 	margin-left: 20px;
-	font-size: 20px;
+	font-size: 16px;
 	padding-left: 0px;
 }
 
@@ -246,8 +248,9 @@
 }
 
 .knowledge-base .widget h4 {
+	padding-left: 24px;
 	text-transform: uppercase;
-	font-family: Roboto;
+	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
@@ -308,17 +311,17 @@
 }
 .knowledge-base .tagcloud .btn-mini {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	padding: 4px 6px;
 	height: 19px;
-	left: 888px;
-	top: 1564px;
 	background: transparent;
-	border: 0.5px solid #000000;
+	border: 0.5px solid #808080;
 	box-sizing: border-box;
 	border-radius: 2px;
-
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 9px;
 }
 .knowledge-base .tagcloud .btn-mini:hover{
 	background-color: rgb(235, 235, 235);
@@ -374,7 +377,7 @@
 	color: #777;
 	line-height: 26px;
 	text-align: justify;
-	font-family: "Roboto",sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 .knowledge-base .alert .fa{
